<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LogInFragment">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="top"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:elevation="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="70dp"
            android:background="@color/primaryDark"
            android:paddingHorizontal="10dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_margin="20dp"
            android:padding="20dp"
            android:elevation="20dp"
            android:orientation="vertical"
            android:background="@drawable/round_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/email"
                android:textColor="@color/primaryDark"
                android:paddingHorizontal="5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/email"
                android:textSize="22sp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint"
                android:layout_marginBottom="20dp"
                android:paddingHorizontal="5dp"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:maxLines="1"
                android:background="@drawable/textview_border"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <TextView
                android:text="@string/password"
                android:textColor="@color/primaryDark"
                android:paddingHorizontal="5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/password"
                android:textSize="22sp"
                android:inputType="textPassword"
                android:paddingHorizontal="5dp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:background="@drawable/textview_border"
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <TextView
                android:id="@+id/forgotPassword"
                android:gravity="end"
                android:textColor="@color/red"
                android:paddingHorizontal="5dp"
                android:text="@string/forgot_password"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/logIn"
                    android:text="@string/log_in"
                    android:textSize="20sp"
                    android:minHeight="40dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/button_border"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <ProgressBar
                    android:id="@+id/loading"
                    android:visibility="invisible"
                    android:padding="5dp"
                    android:elevation="10dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    style="?android:attr/progressBarStyleLarge"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/signUp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/new_user_signup"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</layout>