<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:elevation="20dp"
            android:background="@color/primaryDark"
            android:paddingHorizontal="10dp"
            android:textColor="@color/white"
            android:gravity="center_vertical"/>

        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="50dp"
            android:textSize="25sp"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Forgot Password?"/>


        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="5dp"
            android:text="@string/email"
            android:textColor="@color/primaryDark"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/email_hint"
            android:background="@drawable/round_border"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:elevation="20dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/message"
            android:padding="5dp"
            android:textColor="@color/primaryDark"
            android:layout_marginTop="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="An email with link to reset password will be sent to above mail"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginHorizontal="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/send"
                android:text="Send Link"
                android:textSize="20sp"
                android:minHeight="40dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/button_border"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ProgressBar
                android:id="@+id/loading"
                android:visibility="invisible"
                android:padding="5dp"
                android:elevation="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                style="?android:attr/progressBarStyleLarge"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</layout>